# Xmem

./: .gitignore  README.md  docker-compose.yml  package-lock.json  run-backend.ps1  todo_list.md
.github/workflows/: ci.yml  deploy.yml  release.yml
android/: local.properties  settings.gradle.kts
backend/: Dockerfile  check_celery_setup.py  generate_fake_ledger_data.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt  test_celery.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_note_share_fields.py  0002_add_todo_ai_flag.py  0003_add_note_ai_summary.py  0004_add_export_jobs.py  0005_add_ledger_budgets.py  0006_add_ledger_monthly_summaries.py  0007_add_note_ledger_fields.py  0008_add_budget_currency.py  2f840e72ac66_baseline.py
backend/app/: auth.py  celery_app.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  auth.py  exports.py  ledger.py  notes.py  todos.py
backend/app/services/: ai.py  ledger_ai.py  note_export.py  ocr.py
backend/app/tasks/: file_tasks.py  ledger_tasks.py
backend/app/utils/: exchange_rate.py
backend/exports/user_6/: 13_notes_export.7z.sha256
backend/test/: conftest.py  test_auth_api.py  test_auth_integration.py  test_ledger_api.py  test_ledger_integration.py  test_ledger_tasks.py  test_ledger_tasks_flow.py  test_notes_api.py  test_notes_integration.py  test_ocr.py  test_todos_integration.py
electron/: main.js  package-lock.json  package.json
frontend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+169 files in other folders)
